Enabled SIMD acceleration